[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", default-features = false, features = [ "http1", "json", "ws" ] }
futures = "0.3.21"
tokio = { version = "1.18.1", default-features = false, features = [ "macros", "rt-multi-thread", "signal", "sync", "test-util" ] }

[dev-dependencies]
tokio-tungstenite = { version = "0.17.1" }
